crear conflicto en la rama conflicto

--- a/Productos/producte3.html
+++ b/Productos/producte3.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Conflicto se acerca canto</h2>
+    <h2>Crear aposta un conflicto</h2>
 </body>
 </html>
