index.html arreglado

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stysheet" type="text/css" href="style.css" media="all" tittle="style" />
     <style>
         body{
-            background-color: aqua;
+            background-color: red;
         }
     </style>
 </head>
@@ -16,5 +16,6 @@
     <h1>Página de prueba</h1>
     <p>Autor: Borja Quiñones</p>
     <p>Clase de Sistemas</p>
+    <h3>Modificación desde GitHub</h3>
 </body>
 </html>
